--- a/Cliente (Angular)/ElBancoDeLasPalabras/src/app/app.component.html
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+hola
+<button class="btn btn-danger">Ojo cuidado</button>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-6 d-flex justify-content-center">Hola</div>
+        <div class="col-6 d-flex justify-content-center">Hola</div>
+    </div>
+</div>
