--- a/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/auth-module/pages/login/login.component.html
@@ -1,2 +1,2 @@
 <p>login works!</p>
-<a routerLink="/register" class="btn btn-dark">Registrarse</a>
+<button routerLink="/register" class="btn btn-dark">Registrarse</button>
