--- a/Cliente (Angular)/ElBancoDeLasPalabras/src/app/components/navbar/navbar.component.html
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-white bgSecundario">
   <div class="container-fluid">
-    <a class="navbar-brand ms-2" routerLink="/index">Navbar</a>
+    <a class="navbar-brand ms-2" routerLink="/index">
+      <img src="/assets/Logo.png" class="logo" alt="">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
