--- a/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/main-module/pages/index/index.component.html
@@ -1,1 +1,89 @@
-<p>index works!</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://www.ecestaticos.com/imagestatic/clipping/876/64c/87664c47b6aeaf01d60824dbd287dbf1/la-historia-de-las-librerias-mas-especiales-del-mundo.jpg?mtime=1620995024"
+                class="d-block h-60" alt="primerElemento">
+        </div>
+        <div class="carousel-item">
+            <img src="https://offloadmedia.feverup.com/madridsecreto.co/wp-content/uploads/2019/11/08100929/librerias-con-encanto-madrid-perez-galdos.jpg"
+                class="d-block h-60" alt="segundoElemento">
+        </div>
+        <div class="carousel-item">
+            <img src="https://media.vozpopuli.com/2021/05/20/pexels-stanislav-kondratiev-2908984-e1621504407504-1568x882.jpg"
+                class="d-block h-60" alt="tercerElemento">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<div class="container bg-white gestion mt-5">
+    <div class="row">
+        <div class="col text-center my-3">
+            <h2>Gestiona tu librería</h2>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+            <div class="row">
+                <div class="col-12">
+                    <img class="images" src="https://images.unsplash.com/photo-1511376698188-dd1b33bbca29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                        alt="">
+                </div>
+                <div class="col-12 my-2 d-flex justify-content-center">
+                    <h4>Subir producto</h4>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button class="btn bgSecundario">Subir</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+            <div class="row">
+                <div class="col">
+                    <img class="images" src="https://images.unsplash.com/photo-1593430980369-68efc5a5eb34?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80"
+                        alt="">
+                </div>
+                <div class="col-12 my-2 d-flex justify-content-center">
+                    <h4 class="text-center">Mis libros</h4>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button class="btn bgSecundario">Productos</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+            <div class="row">
+                <div class="col">
+                    <img class="images" src="https://images.unsplash.com/photo-1561715276-a2d087060f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="">
+                </div>
+                <div class="col-12 my-2 d-flex justify-content-center">
+                    <h4>Comprar o intercambiar libros</h4>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button class="btn bgSecundario">Comprar/Cambiar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
