--- a/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/ElBancoDeLasPalabras/src/app/pages/main-module/pages/index/index.component.html
@@ -13,7 +13,7 @@
                 class="d-block h-60" alt="primerElemento">
         </div>
         <div class="carousel-item">
-            <img src="https://offloadmedia.feverup.com/madridsecreto.co/wp-content/uploads/2019/11/08100929/librerias-con-encanto-madrid-perez-galdos.jpg"
+            <img src="https://offloadmedia.feverup.com/madridsecreto.co/wp-content/uploads/2019/01/08110907/Madrid-Secreto-Librerias-23.jpg"
                 class="d-block h-60" alt="segundoElemento">
         </div>
         <div class="carousel-item">
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row mb-3">
-        <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <div class="col-12 col-md-4 mb-4">
             <div class="row">
                 <div class="col-12">
                     <img class="images" src="https://images.unsplash.com/photo-1511376698188-dd1b33bbca29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <div class="col-12 col-md-4 mb-4">
             <div class="row">
                 <div class="col">
                     <img class="images" src="https://images.unsplash.com/photo-1593430980369-68efc5a5eb34?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80"
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <div class="col-12 col-md-4 mb-4">
             <div class="row">
                 <div class="col">
                     <img class="images" src="https://images.unsplash.com/photo-1561715276-a2d087060f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
