Index > Inicar sesión/registrar

--- a/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
@@ -87,3 +87,46 @@
         </div>
     </div>
 </div>
+
+<div class="container bg-white gestion mt-5">
+    <div class="row">
+        <div class="col-12 text-center my-3">
+            <h2>Inicia sesión</h2>
+        </div>
+        <div class="col-12 text-center mb-3">
+            <h4>Inicia sesión en El Banco de las Palabras para poder comprar, vender e intercambiar tus libros.</h4>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-12 col-md-6 mb-4">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <img class="images" src="https://images.unsplash.com/photo-1501618669935-18b6ecb13d6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=849&q=80"
+                        alt="">
+                </div>
+                <div class="col-12 my-2 d-flex justify-content-center">
+                    <h4>Crear cuenta</h4>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button routerLink="/auth/register" class="btn bgSecundario">Crear</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 mb-4">
+            <div class="row">
+                <div class="col d-flex justify-content-center">
+                    <img class="images" src="https://images.unsplash.com/photo-1460467820054-c87ab43e9b59?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=767&q=80"
+                        alt="">
+                </div>
+                <div class="col-12 my-2 d-flex justify-content-center">
+                    <h4 class="text-center">Iniciar sesión</h4>
+                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <button routerLink="/auth/login" class="btn bgSecundario">Iniciar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
