--- a/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
@@ -43,7 +43,7 @@
     <div class="row mb-3">
         <div class="col-12 col-md-4 mb-4">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 d-flex justify-content-center">
                     <img class="images" src="https://images.unsplash.com/photo-1511376698188-dd1b33bbca29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                         alt="">
                 </div>
@@ -58,7 +58,7 @@
 
         <div class="col-12 col-md-4 mb-4">
             <div class="row">
-                <div class="col">
+                <div class="col d-flex justify-content-center">
                     <img class="images" src="https://images.unsplash.com/photo-1593430980369-68efc5a5eb34?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=885&q=80"
                         alt="">
                 </div>
@@ -73,7 +73,7 @@
 
         <div class="col-12 col-md-4 mb-4">
             <div class="row">
-                <div class="col">
+                <div class="col d-flex justify-content-center">
                     <img class="images" src="https://images.unsplash.com/photo-1561715276-a2d087060f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                         alt="">
                 </div>
