--- a/Cliente (Angular)/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.scss
+++ b/Cliente (Angular)/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.scss
@@ -1,9 +1,9 @@
-.register {
+.forgotPassword {
     background-color: white;
     border-radius: 10px;
     width: 50vw;
-    margin-top: 8vh;
-    margin-bottom: 8vh;
+    margin-top: 13vh;
+    margin-bottom: 15vh;
 }
 
 a {
