--- a/Cliente (Angular)/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente (Angular)/src/app/pages/auth-module/pages/register/register.component.html
@@ -1,1 +1,50 @@
-<p>register works!</p>
+<div class="container-fluid register py-4 px-5">
+    <div class="row">
+        <h2 class="text-center mb-3">Crear cuenta</h2>      
+    </div>
+    <hr>
+    <div class="row mt-4">
+        <div class="col-4">
+            <label for="user">Nombre de usuario:</label>
+        </div>
+        <div class="col-8">
+            <input class="input" type="text" name="user" placeholder="Nombre">
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-4">
+            <label for="user">Email:</label>
+        </div>
+        <div class="col-8">
+            <input class="input" type="text" name="email" placeholder="Email">
+        </div>
+    </div>
+    <div class="row my-4">
+        <div class="col-4">
+            <label for="password">Contraseña:</label>
+        </div>
+        <div class="col-8">
+            <input class="input" type="password" name="password" placeholder="Contraseña">
+        </div>
+    </div>
+    <div class="row my-4">
+        <div class="col-4">
+            <label for="password">Repetir contraseña:</label>
+        </div>
+        <div class="col-8">
+            <input class="input" type="password" name="password2" placeholder="Contraseña">
+        </div>
+    </div>
+
+    <div class="row my-3">
+        <div class="col d-flex justify-content-center">
+            <button class="btn bgSecundario">Crear cuenta</button>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col d-flex justify-content-center mt-2">
+            <a href="/auth/login">¿Ya tienes cuenta? ¡Inicia sesión!</a>
+        </div>
+    </div>
+</div>
