--- a/Cliente (Angular)/src/styles.scss
+++ b/Cliente (Angular)/src/styles.scss
@@ -14,6 +14,7 @@
 
 body {
     background: linear-gradient(to bottom, rgba(211, 149, 75, 1), white) no-repeat;
+    font-family: 'Inter', sans-serif;
 }
 
 .btn {
