--- a/Cliente (Angular)/src/app/components/rate-stars/rate-stars.component.html
+++ b/Cliente (Angular)/src/app/components/rate-stars/rate-stars.component.html
@@ -1,4 +1,4 @@
-<div class="valorador row bg-white">
+<div class="valorador row bg-transparent">
     <div *ngIf="!isUser" class="col d-flex justify-content-end">
         <p *ngIf="!stars">Valorar el libro</p>
         <p *ngIf="stars == 1">Muy mal estado</p>
@@ -8,10 +8,6 @@
         <p *ngIf="stars == 5">Como nuevo</p>
     </div>
     <div class="col">
-        <i [class]="stars >= 1? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
-        <i [class]="stars >= 2? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
-        <i [class]="stars >= 3? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
-        <i [class]="stars >= 4? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
-        <i [class]="stars >= 5? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
+        <i *ngFor="let i of [1,2,3,4,5]" [class]="stars >= i? 'mx-1 bi bi-star-fill' : 'mx-1 bi bi-star'"></i>
     </div>
 </div>
