ProductView Component Little fix

--- a/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.scss
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.scss
@@ -42,3 +42,8 @@
     height: 200px;
     background-color: grey;
 }
+
+.profile {
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
