--- a/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-7 bg-white">
+        <div class="col-7 bg-white profile">
             <div class="row">
                 <div class="col-7 mt-4">
                     <h3 class="text-center bold">Jorge Montes Colorín</h3>
@@ -74,12 +74,12 @@
                 <div class="col-5">
                     <div class="row">
                         <div class="col-12 d-flex align-items-center">
-                            <img class="imgProfile"
+                            <img class="imgProfile mt-5"
                                 src="https://images.unsplash.com/photo-1504593811423-6dd665756598?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                                 alt="">
                         </div>
-                        <div class="col-12">
-                            <button class="btn bgSecundario mt-5">Visitar perfil</button>
+                        <div class="col-12 d-flex justify-content-center">
+                            <button class="btn bgSecundario mt-4">Visitar perfil</button>
                         </div>
                     </div>
                 </div>
