--- a/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -24,7 +24,7 @@
                     <h6 class="bold">Estado:</h6>
                     <app-rate-stars [stars]="2"></app-rate-stars>
                 </div>
-                <div class="col-4 price">12€</div>
+                <app-price [price]="12" class="col-4"></app-price>
             </div>
 
             <div class="row mt-4">
