--- a/Cliente (Angular)/src/styles.scss
+++ b/Cliente (Angular)/src/styles.scss
@@ -18,7 +18,13 @@ body {
 }
 
 .btn {
-    color: white;
+    color: white; 
+}
+
+.outlineSecondary {
+    border-width: 1px;
+    border-color: rgba(211, 149, 75, 1);
+    color: black;
 }
 
 .bold {
