Pequeños detalles Exchange component

--- a/Cliente (Angular)/src/app/pages/main-module/pages/exchange/exchange.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/exchange/exchange.component.html
@@ -17,12 +17,12 @@
         </div>
 
         <div class="col-2 d-flex flex-column justify-content-center">
-            <button class="btn bgSecundario py-4">INTERCAMBIAR</button>
+            <button class="btn bgSecundario py-3">INTERCAMBIAR <i class="bi bi-arrow-left-right"></i></button>
         </div>
 
         <div class="profileCard col-5 d-flex flex-column align-items-center justify-content-center">
             <img src="https://images.unsplash.com/photo-1504593811423-6dd665756598?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-                alt="" class="imgProfile">
+                alt="" class="imgProfile mt-4">
             <h4 class="bold text-center mt-4">Jorge Montes Colorín</h4>
             <div class="row my-4">
                 <div class="col-7 d-flex align-items-center">
