Profile component > Cursor tabs

--- a/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -26,11 +26,17 @@
 .tabSelect {
     background-color: rgba(99, 61, 16, 1);
     color: white;
+    user-select: none;
 
 }
 
 .tab {
     background-color: rgba(255, 240, 223, 1);
+    user-select: none;
+}
+
+.tabSelect:hover, .tab:hover {
+    cursor: pointer;
 }
 
 .board {
