--- a/Cliente (Angular)/src/app/components/navbar/navbar.component.html
+++ b/Cliente (Angular)/src/app/components/navbar/navbar.component.html
@@ -27,7 +27,7 @@
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" routerLink="/profile">Mi perfil</a>
-        <a class="dropdown-item" href="#"><span class="badge bg-danger">5</span>Intercambios<br>pendientes</a>
+        <a class="dropdown-item" routerLink="/confirmExchanges"><span class="badge bg-danger">5</span>Intercambios<br>pendientes</a>
         <div class="d-flex justify-content-center mt-2">
           <button class="btn bgSecundario" href="#">Cerrar sesión <i class="bi bi-power"></i></button>
         </div>
