--- a/Cliente (Angular)/src/styles.scss
+++ b/Cliente (Angular)/src/styles.scss
@@ -24,7 +24,7 @@ body {
 .outlineSecondary {
     border-width: 1px;
     border-color: rgba(211, 149, 75, 1);
-    color: black;
+    color: black !important;
 }
 
 .bold {
