--- a/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
@@ -51,7 +51,7 @@
                     <h4>Subir producto</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button class="btn bgSecundario">Subir</button>
+                    <button routerLink="/uploadBook" class="btn bgSecundario">Subir</button>
                 </div>
             </div>
         </div>
