Corrección de rutas

--- a/Cliente (Angular)/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
+++ b/Cliente (Angular)/src/app/pages/auth-module/pages/forgotten-password/forgotten-password.component.html
@@ -24,7 +24,7 @@
     <hr>
     <div class="row">
         <div class="col d-flex justify-content-center mt-2">
-            <a href="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
+            <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
         </div>
     </div>
 </div>
