--- a/Cliente (Angular)/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente (Angular)/src/app/pages/auth-module/pages/login/login.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row my-3">
         <div class="col-6">
-            <a href="/auth/forgottenPassword" routerLink="/register">¿Has olvidado la contraseña?</a>
+            <a routerLink="/auth/forgottenPassword">¿Has olvidado la contraseña?</a>
         </div>
         <div class="col-6 d-flex justify-content-end">
             <button class="btn bgSecundario">Iniciar sesión</button>
@@ -36,7 +36,7 @@
     <hr>
     <div class="row">
         <div class="col d-flex justify-content-center mt-2">
-            <a href="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
+            <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
         </div>
     </div>
 </div>
