--- a/Cliente (Angular)/src/app/pages/auth-module/pages/register/register.component.html
+++ b/Cliente (Angular)/src/app/pages/auth-module/pages/register/register.component.html
@@ -44,7 +44,7 @@
     <hr>
     <div class="row">
         <div class="col d-flex justify-content-center mt-2">
-            <a href="/auth/login">¿Ya tienes cuenta? ¡Inicia sesión!</a>
+            <a routerLink="/auth/login">¿Ya tienes cuenta? ¡Inicia sesión!</a>
         </div>
     </div>
 </div>
