--- a/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/index/index.component.html
@@ -66,7 +66,7 @@
                     <h4 class="text-center">Mis libros</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button class="btn bgSecundario">Productos</button>
+                    <button routerLink="/profile" class="btn bgSecundario">Productos</button>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <h4>Comprar o intercambiar libros</h4>
                 </div>
                 <div class="col-12 d-flex justify-content-center">
-                    <button class="btn bgSecundario">Comprar/Cambiar</button>
+                    <button routerLink="/products" class="btn bgSecundario">Comprar/Cambiar</button>
                 </div>
             </div>
         </div>
