--- a/Cliente (Angular)/src/app/components/navbar/navbar.component.html
+++ b/Cliente (Angular)/src/app/components/navbar/navbar.component.html
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ms-4">
-          <a class="nav-link" routerLink="/auth/login">Login</a>
+          <a class="nav-link" routerLink="/profile">Mis libros</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link" routerLink="/auth/register">Register</a>
+          <a class="nav-link" routerLink="/uploadBook">Subir libro</a>
         </li>
       </ul>
     </div>
