--- a/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.html
@@ -56,7 +56,7 @@
                     <h3 class="text-center my-3">El Imperio Final</h3>
                 </div>
                 <div class="col-12 d-flex justify-content-center mb-4">
-                    <button class="btn bgSecundario">Editar producto</button>
+                    <button [routerLink]="'/modifyBook/'+i" class="btn bgSecundario">Editar producto</button>
                 </div>
             </div>
         </div>
