Cohesión entre rutas: products > producView > purchase

--- a/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -32,7 +32,7 @@
                     <button class="btn bgSecundario">Intercambiar <i class="bi bi-arrow-left-right"></i></button>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <button class="btn bgSecundario">COMPRAR <i class="bi bi-cart-check-fill"></i></button>
+                    <button routerLink="/purchase/1" class="btn bgSecundario">COMPRAR <i class="bi bi-cart-check-fill"></i></button>
                 </div>
             </div>
         </div>
