--- a/Cliente (Angular)/src/app/pages/main-module/pages/products/products.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/products/products.component.html
@@ -29,7 +29,7 @@
                 <div class="col-12 mt-3">
                     <h4 class="text-center">El Imperio Final</h4>
                 </div>
-                <div class="col-12 mb-4">
+                <div class="col-12">
                     <div class="row">
                         <div class="col-8 d-flex align-items-center justify-content-center">
                             <p class="text-center">Jorge Montes Colorín</p>
@@ -39,10 +39,11 @@
                                 class="imgProfile" alt="">
                         </div>
                     </div>
-
+                </div>
+                <div class="co-12 d-flex justify-content-center">
+                    <button [routerLink]="'/productView/'+i" class="btn bgSecundario mb-4">Ver libro</button>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
