--- a/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente (Angular)/src/app/pages/main-module/pages/profile/profile.component.html
@@ -15,7 +15,7 @@
             <p>Fecha de nacimiento: 12/04/1989</p>
             <div class="row">
                 <div class="col-3">
-                    <button class="btn bgSecundario">Editar perfil</button>
+                    <button routerLink="/editProfile" class="btn bgSecundario">Editar perfil</button>
                 </div>
                 <div class="col-9">
                     <div class="row d-flex justify-content-center">
