Navbar component > Dropdown Fix

--- a/Cliente (Angular)/src/app/components/navbar/navbar.component.html
+++ b/Cliente (Angular)/src/app/components/navbar/navbar.component.html
@@ -19,13 +19,13 @@
     </div>
 
     <div class="dropdown">
-      <button class="btn dropdown-toggle text-white bgTerciario me-5" type="button" id="dropdownMenuLink"
+      <button class="btn dropdown-toggle text-white bgTerciario" type="button" id="dropdownMenuLink"
         data-bs-toggle="dropdown" aria-expanded="false">
         Mi perfil
         <i class="bi bi-person-fill"></i>
         <span class="badge bg-danger">5</span>
       </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" routerLink="/profile">Mi perfil</a>
         <a class="dropdown-item" routerLink="/confirmExchanges"><span class="badge bg-danger">5</span>Intercambios<br>pendientes</a>
         <div class="d-flex justify-content-center mt-2">
