--- a/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
@@ -1,22 +1,22 @@
-<div class="container-fluid login py-4 px-5">
+<form [formGroup]="loginForm" class="container-fluid login py-4 px-5">
     <div class="row">
         <h2 class="text-center mb-3">Iniciar sesión</h2>      
     </div>
     <hr>
     <div class="row mt-4">
-        <div class="col-3">
-            <label for="user">Nombre de usuario:</label>
+        <div class="col-md-3">
+            <label for="user">Email:</label>
         </div>
-        <div class="col-9">
-            <input class="input" type="text" name="user" placeholder="Nombre">
+        <div class="col-md-9 mt-2 mt-md-0">
+            <input formControlName="email" class="input" type="text" placeholder="Email">
         </div>
     </div>
     <div class="row my-4">
-        <div class="col-3">
+        <div class="col-md-3">
             <label for="password">Contraseña:</label>
         </div>
-        <div class="col-9">
-            <input class="input" type="password" name="password" placeholder="Contraseña">
+        <div class="col-md-9 mt-2 mt-md-0">
+            <input formControlName="pass" class="input" type="password" placeholder="Contraseña">
         </div>
     </div>
     <div class="row">
@@ -30,7 +30,7 @@
             <a routerLink="/auth/forgottenPassword">¿Has olvidado la contraseña?</a>
         </div>
         <div class="col-6 d-flex justify-content-end">
-            <button class="btn bgSecundario">Iniciar sesión</button>
+            <button type="button" (click)="authUser()" class="btn bgSecundario">Iniciar sesión</button>
         </div>
     </div>
     <hr>
@@ -39,4 +39,4 @@
             <a routerLink="/auth/register">¿No tienes cuenta? ¡Regístrate!</a>
         </div>
     </div>
-</div>
+</form>
