--- a/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="loginForm" class="container-fluid login py-4 px-5">
     <div class="row">
-        <h2 class="text-center mb-3">Iniciar sesión</h2>      
+        <h2 class="text-center mb-3">Iniciar sesión</h2>
     </div>
     <hr>
     <div class="row mt-4">
@@ -23,8 +23,9 @@
         <div class="col-md-3">
             <label for="password">Contraseña:</label>
         </div>
-        <div class="col-md-9 mt-2 mt-md-0">
-            <input formControlName="pass" class="input" type="password" placeholder="Contraseña">
+        <div class="col-md-9 mt-2 mt-md-0 divPass">
+            <input formControlName="pass" class="input" [type]="showPass ? 'text' : 'password'" placeholder="Contraseña">
+            <i (click)="showPass = !showPass" [class]="  showPass ? 'bi bi-eye-slash-fill icon' : 'bi bi-eye-fill icon'"></i>
         </div>
         <div class="errorForm" *ngIf="submitted && myForm['pass'].errors">
             <div *ngIf="myForm['pass'].errors['required']">
