--- a/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.scss
+++ b/Cliente-Angular/src/app/pages/auth-module/pages/login/login.component.scss
@@ -13,3 +13,11 @@ a {
 .input {
     width: 100%;
 }
+
+.icon {
+    float: initial;
+    margin-left: -30px;
+    margin-top: 3px;
+    position: relative;
+    z-index: 2;
+}
